[gd_scene load_steps=17 format=2]

[ext_resource path="res://Src/Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Src/Engine/LevelEnder.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/TileSet/tile_test.png" type="Texture" id=3]
[ext_resource path="res://Assets/TileSet/Backgorund-1.png" type="Texture" id=4]
[ext_resource path="res://SpikeTileMap.tscn" type="PackedScene" id=5]
[ext_resource path="res://Src/Engine/Level2d_General.gd" type="Script" id=6]
[ext_resource path="res://Src/SpecialThing/CheckPoint.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/Background/set_tiles.png" type="Texture" id=8]
[ext_resource path="res://Assets/Background/1-set_tile.png" type="Texture" id=9]
[ext_resource path="res://Assets/Background/2-set_tile.png" type="Texture" id=10]
[ext_resource path="res://Assets/Background/3-set_tile.png" type="Texture" id=11]
[ext_resource path="res://Assets/Background/4-set_tile.png" type="Texture" id=12]
[ext_resource path="res://Assets/Background/set2_background.png" type="Texture" id=13]
[ext_resource path="res://Src/Engine/Coletavel.tscn" type="PackedScene" id=14]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="TileSet" id=2]
0/name = "tile_test.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "Backgorund-1.png 1"
1/texture = ExtResource( 4 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[node name="World" type="Node2D"]
z_index = -1
script = ExtResource( 6 )
area = 1

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -2031597, 0, 0, -2031596, 0, 0, -2031595, 0, 0, -2031594, 0, 0, -2031593, 0, 0, -1966061, 0, 0, -1966057, 0, 0, -1966056, 0, 0, -1966055, 0, 0, -1966054, 0, 0, -1966053, 0, 0, -1966052, 0, 0, -1966051, 0, 0, -1966050, 0, 0, -1966049, 0, 0, -1966048, 0, 0, -1900525, 0, 0, -1900512, 0, 0, -1834989, 0, 0, -1834976, 0, 0, -1769453, 0, 0, -1769440, 0, 0, -1703917, 0, 0, -1703904, 0, 0, -1638381, 0, 0, -1638377, 0, 0, -1638376, 0, 0, -1638375, 0, 0, -1638374, 0, 0, -1638373, 0, 0, -1638372, 0, 0, -1638371, 0, 0, -1638370, 0, 0, -1638369, 0, 0, -1638368, 0, 0, -1572845, 0, 0, -1572842, 0, 0, -1572841, 0, 0, -1507309, 0, 0, -1507305, 0, 0, -1441773, 0, 0, -1441769, 0, 0, -1376237, 0, 0, -1376233, 0, 0, -1310701, 0, 0, -1310700, 0, 0, -1310697, 0, 0, -1310696, 0, 0, -1310695, 0, 0, -1245164, 0, 0, -1245159, 0, 0, -1179628, 0, 0, -1179623, 0, 0, -1114092, 0, 0, -1114087, 0, 0, -1048561, 0, 0, -1048560, 0, 0, -1048559, 0, 0, -1048558, 0, 0, -1048557, 0, 0, -1048556, 0, 0, -1048554, 0, 0, -1048553, 0, 0, -1048552, 0, 0, -1048551, 0, 0, -983025, 0, 0, -983022, 0, 0, -983018, 0, 0, -983015, 0, 0, -917489, 0, 0, -917482, 0, 0, -917479, 0, 0, -851953, -1073741824, 0, -851946, -1073741824, 0, -851943, -1073741824, 0, -786417, -1073741824, 0, -786414, -1073741824, 0, -786410, -1073741824, 0, -786407, -1073741824, 0, -720881, -1073741824, 0, -720878, -1073741824, 0, -720877, -1073741824, 0, -720876, -1073741824, 0, -720875, -1073741824, 0, -720874, -1073741824, 0, -720871, -1073741824, 0, -655346, -1073741824, 0, -655334, -1073741824, 0, -589811, -1073741824, 0, -589797, -1073741824, 0, -524276, -1073741824, 0, -524260, -1073741824, 0, -458741, -1073741824, 0, -458723, -1073741824, 0, -393206, -1073741824, 0, -393186, -1073741824, 0, -327671, 0, 0, -327649, -1073741824, 0, -262136, -1073741824, 0, -262129, -1073741824, 0, -262128, -1073741824, 0, -262120, -1073741824, 0, -262119, -1073741824, 0, -262112, -1073741824, 0, -196601, -1073741824, 0, -196594, -1073741824, 0, -196592, -1073741824, 0, -196584, -1073741824, 0, -196582, -1073741824, 0, -196575, -1073741824, 0, -65566, 0, 0, -65565, 0, 0, -65564, 0, 0, -65563, 0, 0, -65562, 0, 0, -65561, 0, 0, -65560, 0, 0, -65559, 0, 0, -65558, 0, 0, -65557, 0, 0, -65556, 0, 0, -65555, 0, 0, -65554, 0, 0, -65553, 0, 0, -65552, 0, 0, -65551, 0, 0, -65550, 0, 0, -65549, 0, 0, -65548, 0, 0, -65547, 0, 0, -65546, 0, 0, -65545, 0, 0, -65544, 0, 0, -65543, 0, 0, -65542, 0, 0, -65541, 0, 0, -65540, 0, 0, -65539, 0, 0, -65538, 0, 0, -65537, 0, 0, -131072, 0, 0, -131071, 0, 0, -131070, 0, 0, -131069, 0, 0, -131068, 0, 0, -131067, 0, 0, -131066, 0, 0, -131059, -1073741824, 0, -131056, -1073741824, 0, -131048, -1073741824, 0, -131045, -1073741824, 0, -131038, -1073741824, 0, -30, 0, 0, -65524, -1073741824, 0, -65520, -1073741824, 0, -65512, -1073741824, 0, -65508, -1073741824, 0, -65501, -1073741824, 0, 65506, 0, 0, 11, -1073741824, 0, 16, -1073741824, 0, 17, -1073741824, 0, 18, -1073741824, 0, 19, -1073741824, 0, 20, -1073741824, 0, 21, -1073741824, 0, 22, -1073741824, 0, 23, -1073741824, 0, 24, -1073741824, 0, 29, -1073741824, 0, 36, -1073741824, 0, 131042, 0, 0, 65546, -1073741824, 0, 65565, -1073741824, 0, 65572, 0, 0, 196578, 0, 0, 131081, -1073741824, 0, 131101, -1073741824, 0, 131108, 0, 0, 262114, 0, 0, 196616, -1073741824, 0, 196637, -1073741824, 0, 196644, 0, 0, 327650, 0, 0, 327651, 0, 0, 327652, 0, 0, 327653, 0, 0, 327654, 0, 0, 327655, 0, 0, 327656, 0, 0, 327657, 0, 0, 327658, 0, 0, 327664, 0, 0, 327665, 0, 0, 327666, 0, 0, 327667, 0, 0, 327668, 0, 0, 327669, 0, 0, 327671, 0, 0, 327672, 0, 0, 327673, 0, 0, 327674, 0, 0, 327675, 0, 0, 327676, 0, 0, 327677, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, -1073741824, 0, 262151, -1073741824, 0, 262173, -1073741824, 0, 262180, 0, 0, 393186, -1073741824, 0, 393194, 0, 0, 393200, 0, 0, 393205, 0, 0, 393207, 0, 0, 393213, 0, 0, 327681, 0, 0, 327709, -1073741824, 0, 327716, 0, 0, 458722, -1073741824, 0, 458730, 0, 0, 458736, 0, 0, 458741, 0, 0, 458742, 0, 0, 458743, 0, 0, 458749, 0, 0, 458750, 0, 0, 458751, 0, 0, 393216, 0, 0, 393217, 0, 0, 393245, -1073741824, 0, 393252, 0, 0, 524258, -1073741824, 0, 524266, 0, 0, 524272, 0, 0, 458781, -1073741824, 0, 458788, 0, 0, 589794, -1073741824, 0, 589802, 0, 0, 589808, 0, 0, 524317, -1073741824, 0, 524324, 0, 0, 655330, -1073741824, 0, 655338, 0, 0, 655344, 0, 0, 589853, -1073741824, 0, 589858, 0, 0, 589859, 0, 0, 589860, 0, 0, 720866, -1073741824, 0, 720874, 0, 0, 720880, 0, 0, 655389, -1073741824, 0, 655396, 0, 0, 786402, -1073741824, 0, 786410, 0, 0, 786416, 0, 0, 720925, -1073741824, 0, 720932, 0, 0, 851938, -1073741824, 0, 851946, 0, 0, 851952, 0, 0, 786461, -1073741824, 0, 786468, 0, 0, 917474, -1073741824, 0, 917482, 0, 0, 917488, 0, 0, 851997, -1073741824, 0, 852004, 0, 0, 983000, -1073741824, 0, 983001, -1073741824, 0, 983002, -1073741824, 0, 983003, -1073741824, 0, 983004, -1073741824, 0, 983005, -1073741824, 0, 983006, -1073741824, 0, 983007, -1073741824, 0, 983008, -1073741824, 0, 983009, -1073741824, 0, 983010, -1073741824, 0, 983018, 0, 0, 983019, 0, 0, 983020, 0, 0, 983021, 0, 0, 983022, 0, 0, 983023, 0, 0, 983024, 0, 0, 917533, -1073741824, 0, 917540, 0, 0, 1048536, -1073741824, 0, 1048554, -1073741824, 0, 983069, -1073741824, 0, 983076, 0, 0, 1114072, -1073741824, 0, 1114090, -1073741824, 0, 1048605, -1073741824, 0, 1048606, -1073741824, 0, 1048607, 0, 0, 1048612, 0, 0, 1179608, -1073741824, 0, 1179626, -1073741824, 0, 1179627, -1073741824, 0, 1114141, -1073741824, 0, 1114148, 0, 0, 1245144, -1073741824, 0, 1245162, -1073741824, 0, 1179648, -1073741824, 0, 1179649, -1073741824, 0, 1179650, -1073741824, 0, 1179651, 0, 0, 1179652, 0, 0, 1179653, 0, 0, 1179654, 0, 0, 1179655, 0, 0, 1179656, 0, 0, 1179657, 0, 0, 1179658, 0, 0, 1179659, 0, 0, 1179660, 0, 0, 1179661, 0, 0, 1179662, 0, 0, 1179663, 0, 0, 1179664, 0, 0, 1179665, 0, 0, 1179666, 0, 0, 1179667, 0, 0, 1179668, 0, 0, 1179669, -1073741824, 0, 1179677, -1073741824, 0, 1179684, 0, 0, 1310680, -1073741824, 0, 1310686, -1073741824, 0, 1310687, -1073741824, 0, 1310688, -1073741824, 0, 1310689, -1073741824, 0, 1310690, -1073741824, 0, 1310691, -1073741824, 0, 1310692, -1073741824, 0, 1310693, -1073741824, 0, 1310694, -1073741824, 0, 1310695, -1073741824, 0, 1310696, -1073741824, 0, 1310697, -1073741824, 0, 1310698, -1073741824, 0, 1310699, -1073741824, 0, 1310700, -1073741824, 0, 1310701, -1073741824, 0, 1310702, -1073741824, 0, 1310703, -1073741824, 0, 1310704, 0, 0, 1310705, 0, 0, 1310706, 0, 0, 1310707, 0, 0, 1310708, 0, 0, 1310709, 0, 0, 1310710, 0, 0, 1245184, -1073741824, 0, 1245205, -1073741824, 0, 1245213, -1073741824, 0, 1245220, 0, 0, 1376217, -1073741824, 0, 1376222, -1073741824, 0, 1376231, -1073741824, 0, 1376246, 0, 0, 1310720, -1073741824, 0, 1310741, -1073741824, 0, 1310749, -1073741824, 0, 1310756, 0, 0, 1441753, -1073741824, 0, 1441759, -1073741824, 0, 1441767, -1073741824, 0, 1441782, 0, 0, 1376256, -1073741824, 0, 1376277, -1073741824, 0, 1376278, -1073741824, 0, 1376279, 0, 0, 1376280, -1073741824, 0, 1376281, -1073741824, 0, 1376282, -1073741824, 0, 1376283, -1073741824, 0, 1376284, -1073741824, 0, 1376285, -1073741824, 0, 1376292, 0, 0, 1507289, -1073741824, 0, 1507295, -1073741824, 0, 1507303, -1073741824, 0, 1507318, 0, 0, 1441792, -1073741824, 0, 1441828, 0, 0, 1572826, -1073741824, 0, 1572831, -1073741824, 0, 1572839, -1073741824, 0, 1572844, -1610612736, 0, 1572845, -1073741824, 0, 1572846, -1073741824, 0, 1572854, 0, 0, 1572855, -1073741824, 0, 1572856, -1073741824, 0, 1572857, -1073741824, 0, 1572858, -1073741824, 0, 1572859, -1073741824, 0, 1572860, -1073741824, 0, 1572861, -1073741824, 0, 1572862, -1073741824, 0, 1572863, -1073741824, 0, 1507328, -1073741824, 0, 1507333, -1073741824, 0, 1507334, -1073741824, 0, 1507338, -1073741824, 0, 1507339, -1073741824, 0, 1507344, -1073741824, 0, 1507345, -1073741824, 0, 1507362, 0, 0, 1507363, 0, 0, 1507364, 0, 0, 1638362, -1073741824, 0, 1638368, -1073741824, 0, 1638374, -1073741824, 0, 1638380, -1073741824, 0, 1638382, -1073741824, 0, 1638383, 0, 0, 1572900, 0, 0, 1703898, -1073741824, 0, 1703904, -1073741824, 0, 1703910, -1073741824, 0, 1703916, -1073741824, 0, 1703919, 0, 0, 1638436, 0, 0, 1769434, -1073741824, 0, 1769440, -1073741824, 0, 1769446, -1073741824, 0, 1769452, -1073741824, 0, 1769455, 0, 0, 1703972, 0, 0, 1703973, 0, 0, 1703974, 0, 0, 1703975, 0, 0, 1703976, 0, 0, 1703977, 0, 0, 1703978, 0, 0, 1703979, 0, 0, 1703980, 0, 0, 1703981, 0, 0, 1834971, -1073741824, 0, 1834977, -1073741824, 0, 1834981, -1073741824, 0, 1834987, -1073741824, 0, 1834991, 0, 0, 1769517, 0, 0, 1900507, -1073741824, 0, 1900513, -1073741824, 0, 1900517, -1073741824, 0, 1900523, -1073741824, 0, 1900527, 0, 0, 1900534, 0, 0, 1900535, -1073741824, 0, 1900536, -1073741824, 0, 1900537, -1073741824, 0, 1900538, -1073741824, 0, 1900539, -1073741824, 0, 1900540, -1073741824, 0, 1900541, 0, 0, 1835010, -1073741824, 0, 1835011, -1073741824, 0, 1835015, -1073741824, 0, 1835016, -1073741824, 0, 1835021, -1073741824, 0, 1835022, -1073741824, 0, 1835028, -1073741824, 0, 1835029, -1073741824, 0, 1835030, 0, 0, 1835031, 0, 0, 1835032, 0, 0, 1835033, 0, 0, 1835034, 0, 0, 1835035, 0, 0, 1835036, 0, 0, 1835037, -1073741824, 0, 1835053, 0, 0, 1966043, -1073741824, 0, 1966049, -1073741824, 0, 1966053, -1073741824, 0, 1966059, -1073741824, 0, 1966063, 0, 0, 1966070, 0, 0, 1966077, -1073741824, 0, 1900564, -1073741824, 0, 1900573, -1073741824, 0, 1900580, 0, 0, 1900581, 0, 0, 1900582, 0, 0, 1900589, 0, 0, 2031580, -1073741824, 0, 2031586, -1073741824, 0, 2031588, -1073741824, 0, 2031594, -1073741824, 0, 2031599, 0, 0, 2031606, 0, 0, 2031613, -1073741824, 0, 1966109, -1073741824, 0, 1966116, 0, 0, 1966118, 0, 0, 1966125, 0, 0, 2097116, -1073741824, 0, 2097122, -1073741824, 0, 2097124, -1073741824, 0, 2097130, -1073741824, 0, 2097135, 0, 0, 2097142, 0, 0, 2097149, -1073741824, 0, 2031645, -1073741824, 0, 2031652, 0, 0, 2031654, 0, 0, 2031661, 0, 0, 2162652, -1073741824, 0, 2162658, -1073741824, 0, 2162659, -1073741824, 0, 2162660, -1073741824, 0, 2162666, -1073741824, 0, 2162671, 0, 0, 2162678, 0, 0, 2162685, -1073741824, 0, 2097181, -1073741824, 0, 2097182, -1073741824, 0, 2097183, 0, 0, 2097184, 0, 0, 2097185, 0, 0, 2097186, 0, 0, 2097187, 0, 0, 2097188, 0, 0, 2097190, 0, 0, 2097197, 0, 0, 2228189, -1073741824, 0, 2228201, -1073741824, 0, 2228207, 0, 0, 2228214, 0, 0, 2228221, -1073741824, 0, 2228222, -1073741824, 0, 2228223, -1073741824, 0, 2162688, 0, 0, 2162689, 0, 0, 2162690, 0, 0, 2162691, 0, 0, 2162692, 0, 0, 2162693, 0, 0, 2162694, 0, 0, 2162695, 0, 0, 2162696, 0, 0, 2162697, 0, 0, 2162698, 0, 0, 2162699, 0, 0, 2162700, 0, 0, 2162701, 0, 0, 2162702, 0, 0, 2162703, 0, 0, 2162704, 0, 0, 2162705, 0, 0, 2162706, 0, 0, 2162707, -1073741824, 0, 2162708, -1073741824, 0, 2162709, 0, 0, 2162710, 0, 0, 2162717, 0, 0, 2162727, 0, 0, 2162734, 0, 0, 2293725, -1073741824, 0, 2293737, -1073741824, 0, 2293743, 0, 0, 2293750, 0, 0, 2228246, 0, 0, 2228253, 0, 0, 2228263, 0, 0, 2228270, 0, 0, 2359261, -1073741824, 0, 2359273, -1073741824, 0, 2359279, 0, 0, 2359280, 0, 0, 2359281, 0, 0, 2359286, 0, 0, 2293782, 0, 0, 2293789, 0, 0, 2293799, 0, 0, 2293806, 0, 0, 2424798, -1073741824, 0, 2424808, -1073741824, 0, 2424815, 0, 0, 2424822, 0, 0, 2359318, 0, 0, 2359325, 0, 0, 2359335, 0, 0, 2359342, 0, 0, 2490334, -1073741824, 0, 2490344, -1073741824, 0, 2490351, 0, 0, 2490358, 0, 0, 2424854, 0, 0, 2424861, 0, 0, 2424872, 0, 0, 2424879, 0, 0, 2555870, -1073741824, 0, 2555871, -1073741824, 0, 2555872, -1073741824, 0, 2555873, -1073741824, 0, 2555874, -1073741824, 0, 2555875, -1073741824, 0, 2555876, -1073741824, 0, 2555877, -1073741824, 0, 2555878, -1073741824, 0, 2555879, -1073741824, 0, 2555880, -1073741824, 0, 2555887, 0, 0, 2555894, 0, 0, 2490390, 0, 0, 2490397, 0, 0, 2490408, 0, 0, 2490415, 0, 0, 2621423, 0, 0, 2621430, 0, 0, 2555926, 0, 0, 2555933, 0, 0, 2555944, 0, 0, 2555951, 0, 0, 2686959, 0, 0, 2686966, 0, 0, 2621462, 0, 0, 2621469, 0, 0, 2621480, 0, 0, 2621487, 0, 0, 2752495, 0, 0, 2752502, 0, 0, 2686983, 0, 0, 2686984, 0, 0, 2686985, 0, 0, 2686986, 0, 0, 2686987, 0, 0, 2686988, 0, 0, 2686989, 0, 0, 2686990, 0, 0, 2686991, 0, 0, 2686992, 0, 0, 2686993, 0, 0, 2686994, 0, 0, 2686995, 0, 0, 2686998, 0, 0, 2687005, 0, 0, 2687015, 0, 0, 2687022, 0, 0, 2818031, 0, 0, 2818038, 0, 0, 2752519, 0, 0, 2752531, 0, 0, 2752534, 0, 0, 2752541, 0, 0, 2752551, 0, 0, 2752558, 0, 0, 2883567, 0, 0, 2883574, 0, 0, 2818055, 0, 0, 2818067, 0, 0, 2818070, 0, 0, 2818077, 0, 0, 2818087, 0, 0, 2818094, 0, 0, 2949103, 0, 0, 2949110, 0, 0, 2883585, 0, 0, 2883586, 0, 0, 2883587, 0, 0, 2883588, 0, 0, 2883589, 0, 0, 2883590, 0, 0, 2883591, 0, 0, 2883603, 0, 0, 2883604, 0, 0, 2883605, 0, 0, 2883606, 0, 0, 2883613, 0, 0, 2883623, 0, 0, 2883630, 0, 0, 3014639, 0, 0, 3014646, 0, 0, 2949121, 0, 0, 2949149, 0, 0, 2949158, 0, 0, 2949165, 0, 0, 3080175, 0, 0, 3080182, 0, 0, 3080183, 0, 0, 3080184, 0, 0, 3080185, 0, 0, 3080186, 0, 0, 3080187, 0, 0, 3080188, 0, 0, 3080189, 0, 0, 3080190, 0, 0, 3080191, 0, 0, 3014656, 0, 0, 3014657, 0, 0, 3014685, 0, 0, 3014694, 0, 0, 3014701, 0, 0, 3145711, 0, 0, 3080221, 0, 0, 3080230, 0, 0, 3080237, 0, 0, 3211247, 0, 0, 3145757, 0, 0, 3145766, 0, 0, 3145773, 0, 0, 3276783, 0, 0, 3211293, 0, 0, 3211302, 0, 0, 3211309, 0, 0, 3342319, 0, 0, 3276814, 0, 0, 3276815, 0, 0, 3276816, 0, 0, 3276817, 0, 0, 3276818, 0, 0, 3276819, 0, 0, 3276820, 0, 0, 3276821, 0, 0, 3276822, 0, 0, 3276823, 0, 0, 3276824, 0, 0, 3276825, 0, 0, 3276826, 0, 0, 3276827, 0, 0, 3276828, 0, 0, 3276829, 0, 0, 3276838, 0, 0, 3276845, 0, 0, 3407855, 0, 0, 3342350, 0, 0, 3342374, 0, 0, 3342381, 0, 0, 3473391, 0, 0, 3407886, 0, 0, 3407910, 0, 0, 3407917, 0, 0, 3538927, 0, 0, 3538928, 0, 0, 3538929, 0, 0, 3538930, 0, 0, 3538931, 0, 0, 3538932, 0, 0, 3538933, 0, 0, 3538934, 0, 0, 3538935, 0, 0, 3538936, 0, 0, 3538937, 0, 0, 3538938, 0, 0, 3538939, 0, 0, 3538940, 0, 0, 3538941, 0, 0, 3538942, 0, 0, 3538943, 0, 0, 3473408, 0, 0, 3473409, 0, 0, 3473422, 0, 0, 3473446, 0, 0, 3473447, 0, 0, 3473448, 0, 0, 3473449, 0, 0, 3473450, 0, 0, 3473451, 0, 0, 3473452, 0, 0, 3473453, 0, 0, 3538945, 0, 0, 3538958, 0, 0, 3604481, 0, 0, 3604482, 0, 0, 3604483, 0, 0, 3604484, 0, 0, 3604485, 0, 0, 3604486, 0, 0, 3604487, 0, 0, 3604488, 0, 0, 3604489, 0, 0, 3604490, 0, 0, 3604491, 0, 0, 3604492, 0, 0, 3604493, 0, 0, 3604494, 0, 0 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( -458, 57 )

[node name="LevelEnder" parent="." instance=ExtResource( 2 )]
position = Vector2( -94, 437 )

[node name="SpikeTileMap" parent="." instance=ExtResource( 5 )]
tile_data = PoolIntArray( -983024, 1610612736, 0, -983023, 1610612736, 0, -983017, 1610612736, 0, -983016, 1610612736, 0, -65519, 0, 0, -65518, 0, 0, -65517, 0, 0, -65516, 0, 0, -65515, 0, 0, -65514, 0, 0, -65513, 0, 0, 393206, 0, 0, 393214, 0, 0, 393215, 0, 0, 327680, 0, 0, 1245185, 1610612736, 0, 1245186, 1610612736, 0, 1245187, 1610612736, 0, 1245188, 1610612736, 0, 1245189, 1610612736, 0, 1245190, 1610612736, 0, 1245191, 1610612736, 0, 1245192, 1610612736, 0, 1245193, 1610612736, 0, 1245194, 1610612736, 0, 1245195, 1610612736, 0, 1245196, 1610612736, 0, 1245197, 1610612736, 0, 1245198, 1610612736, 0, 1245199, 1610612736, 0, 1245200, 1610612736, 0, 1245201, 1610612736, 0, 1245202, 1610612736, 0, 1245203, 1610612736, 0, 1245204, 1610612736, 0, 1376218, -1610612736, 0, 1376240, 1610612736, 0, 1376241, 1610612736, 0, 1376242, 1610612736, 0, 1376243, 1610612736, 0, 1376244, 1610612736, 0, 1376245, 1610612736, 0, 1441754, -1610612736, 0, 1441758, -1073741824, 0, 1507290, -1610612736, 0, 1507294, -1073741824, 0, 1572827, -1610612736, 0, 1572830, -1073741824, 0, 1638363, -1610612736, 0, 1638367, -1073741824, 0, 1638375, -1610612736, 0, 1638379, -1073741824, 0, 1703899, -1610612736, 0, 1703903, -1073741824, 0, 1703911, -1610612736, 0, 1703915, -1073741824, 0, 1769435, -1610612736, 0, 1769439, -1073741824, 0, 1769447, -1610612736, 0, 1769451, -1073741824, 0, 1834972, -1610612736, 0, 1834976, -1073741824, 0, 1834982, -1610612736, 0, 1834986, -1073741824, 0, 1900508, -1610612736, 0, 1900512, -1073741824, 0, 1900518, -1610612736, 0, 1900522, -1073741824, 0, 1966044, -1610612736, 0, 1966048, -1073741824, 0, 1966054, -1610612736, 0, 1966058, -1073741824, 0, 2031581, -1610612736, 0, 2031585, -1073741824, 0, 2031589, -1610612736, 0, 2031593, -1073741824, 0, 1966119, -1610612736, 0, 1966124, -1073741824, 0, 2097117, -1610612736, 0, 2097121, -1073741824, 0, 2097125, -1610612736, 0, 2097129, -1073741824, 0, 2031646, 0, 0, 2031647, 0, 0, 2031648, 0, 0, 2031649, 0, 0, 2031650, 0, 0, 2031651, 0, 0, 2031655, -1610612736, 0, 2031660, -1073741824, 0, 2162653, -1610612736, 0, 2162657, -1073741824, 0, 2162661, -1610612736, 0, 2162665, -1073741824, 0, 2162686, 0, 0, 2162687, 0, 0, 2097152, 0, 0, 2097153, 0, 0, 2097154, 0, 0, 2097155, 0, 0, 2097156, 0, 0, 2097157, 0, 0, 2097158, 0, 0, 2097159, 0, 0, 2097160, 0, 0, 2097161, 0, 0, 2097162, 0, 0, 2097163, 0, 0, 2097164, 0, 0, 2097165, 0, 0, 2097166, 0, 0, 2097167, 0, 0, 2097168, 0, 0, 2097169, 0, 0, 2097170, 0, 0, 2097171, 0, 0, 2097191, -1610612736, 0, 2097196, -1073741824, 0, 2228190, -1610612736, 0, 2228200, -1073741824, 0, 2162728, -1610612736, 0, 2162733, -1073741824, 0, 2293726, -1610612736, 0, 2293736, -1073741824, 0, 2228264, -1610612736, 0, 2228269, -1073741824, 0, 2359262, -1610612736, 0, 2359272, -1073741824, 0, 2293800, -1610612736, 0, 2293805, -1073741824, 0, 2359336, -1610612736, 0, 2359341, -1073741824, 0, 2424873, -1610612736, 0, 2424878, -1073741824, 0, 2490409, -1610612736, 0, 2490414, -1073741824, 0, 2555945, -1610612736, 0, 2555950, -1073741824, 0, 2621481, -1610612736, 0, 2621486, -1073741824, 0, 2687016, -1610612736, 0, 2687021, -1073741824, 0, 2752520, 1610612736, 0, 2752521, 1610612736, 0, 2752522, 1610612736, 0, 2752523, 1610612736, 0, 2752524, 1610612736, 0, 2752525, 1610612736, 0, 2752526, 1610612736, 0, 2752527, 1610612736, 0, 2752528, 1610612736, 0, 2752529, 1610612736, 0, 2752530, 1610612736, 0, 2752552, -1610612736, 0, 2752557, -1073741824, 0, 2818088, -1610612736, 0, 2818093, -1073741824, 0, 2883624, -1610612736, 0, 2883629, -1073741824, 0, 2949159, -1610612736, 0, 2949164, -1073741824, 0, 3014695, -1610612736, 0, 3014700, -1073741824, 0, 3080231, -1610612736, 0, 3080236, -1073741824, 0, 3145767, -1610612736, 0, 3145772, -1073741824, 0, 3407873, 0, 0, 3538946, 0, 0, 3538947, 0, 0, 3538948, 0, 0, 3538949, 0, 0, 3538950, 0, 0, 3538951, 0, 0, 3538952, 0, 0, 3538953, 0, 0, 3538954, 0, 0, 3538955, 0, 0, 3538956, 0, 0, 3538957, 0, 0 )

[node name="Checkpoints" type="Node2D" parent="."]

[node name="CheckPoint" parent="Checkpoints" instance=ExtResource( 7 )]
position = Vector2( 403, -72 )

[node name="Coletaveis" type="Node2D" parent="."]

[node name="Coletavel0" parent="Coletaveis" instance=ExtResource( 14 )]
position = Vector2( 503, -409 )

[node name="Coletavel1" parent="Coletaveis" instance=ExtResource( 14 )]
position = Vector2( 675, 837 )
number = 1

[node name="Coletavel2" parent="Coletaveis" instance=ExtResource( 14 )]
position = Vector2( -408, 89 )
number = 2

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Bg" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 640, 480 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Bg"]
texture = ExtResource( 13 )
centered = false

[node name="FarAway Blocks" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.4, 0.4 )
motion_offset = Vector2( 0, -100 )
motion_mirroring = Vector2( 640, 351 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/FarAway Blocks"]
modulate = Color( 1, 1, 1, 0.588235 )
texture = ExtResource( 8 )
centered = false

[node name="Middle Blocks F" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.6, 0.6 )
motion_mirroring = Vector2( 800, 438.75 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Middle Blocks F"]
modulate = Color( 1, 1, 1, 0.666667 )
scale = Vector2( 1.25, 1.25 )
texture = ExtResource( 11 )
centered = false

[node name="Middle Blocks M" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.8, 0.8 )
motion_offset = Vector2( 0, 100 )
motion_mirroring = Vector2( 960, 526.5 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Middle Blocks M"]
modulate = Color( 1, 1, 1, 0.784314 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 10 )
centered = false

[node name="Middle Blocks N" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.85, 0.85 )
motion_offset = Vector2( 0, -75 )
motion_mirroring = Vector2( 1120, 614.25 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Middle Blocks N"]
modulate = Color( 1, 1, 1, 0.862745 )
scale = Vector2( 1.75, 1.75 )
texture = ExtResource( 12 )
centered = false

[node name="Nearby Blocks" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.9, 0.9 )
motion_mirroring = Vector2( 1280, 702 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Nearby Blocks"]
scale = Vector2( 2, 2 )
texture = ExtResource( 9 )
centered = false
[connection signal="levelEnded" from="LevelEnder" to="." method="_on_LevelEnder_levelEnded"]
[connection signal="coletado" from="Coletaveis/Coletavel0" to="." method="_on_Coletavel0_coletado"]
[connection signal="coletado" from="Coletaveis/Coletavel1" to="." method="_on_Coletavel1_coletado"]
[connection signal="coletado" from="Coletaveis/Coletavel2" to="." method="_on_Coletavel2_coletado"]
